<resources>
    <string name="app_name">E Messenger</string>
    <string name="welcome_back">Welcome back</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_new_account">Create New account</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>

    <string name="nav_home">Home</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_history">History</string>
    <string name="nav_account">Account</string>
    <string name="nav_my_profile">My Profile</string>
    <string name="nav_change_password">Change Password</string>

    <string name="navgitation_drawer_open">Open navigation</string>
    <string name="navigation_drawer_close">Close navigation</string>
    <string name="select_user">Select User</string>
    <string name="type_a_message">Type a message</string>
    <string name="online">Online</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="more_information">More Information</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_password">Change Password</string>
    <string name="save">Save</string>
    <string name="new_password">New Password</string>
</resources>