<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:clipToPadding="false"
android:overScrollMode="never"
android:padding="@dimen/_24sdp"
android:scrollbars="none"
tools:context=".fragment.PasswordFragment">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/change_password"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold"/>




    <EditText
        android:id="@+id/inputNewPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_100sdp"
        android:background="@drawable/background_input"
        android:hint="@string/new_password"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/_13sdp"/>

    <EditText
        android:id="@+id/inputNewConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/background_input"
        android:hint="@string/confirm_password"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/_13sdp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:animateLayoutChanges="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonChagePass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_20sdp"/>

        <ProgressBar
            android:id="@+id/progressBarUpdate"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="center"
            android:visibility="invisible"/>

    </FrameLayout>



</LinearLayout>

</ScrollView>